[gd_scene load_steps=4 format=3 uid="uid://b11245ku0hnpb"]

[ext_resource type="Script" path="res://Levels/menus/pause_screen.gd" id="1_usky6"]
[ext_resource type="Texture2D" uid="uid://d0f2hvsserfpk" path="res://Levels/menus_border_x2.png" id="2_bhp27"]

[sub_resource type="LabelSettings" id="LabelSettings_fkh31"]
font_size = 80
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="Paused" type="CanvasLayer" groups=["pause_screen"]]
process_mode = 3
script = ExtResource("1_usky6")

[node name="BG" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="TextureRect" type="NinePatchRect" parent="BG"]
layout_mode = 2
texture = ExtResource("2_bhp27")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="PAUSED" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "PAUSED"
label_settings = SubResource("LabelSettings_fkh31")
horizontal_alignment = 1

[node name="Continue" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="MenuButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Menu"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
